# Robot1

./: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.robot.yml  docker-compose.simulation.yml  pyproject.toml
ros2_ws/src/bonbon_behavior_engine/: README.md  package.xml
ros2_ws/src/bonbon_behavior_engine/tests/: test_operator_alerter.py  test_spatial_response_planner.py
ros2_ws/src/bonbon_data_stores/: package.xml  pytest.ini  setup.cfg  setup.py
ros2_ws/src/bonbon_data_stores/bonbon_data_stores/: __init__.py  store.py
ros2_ws/src/bonbon_data_stores/config/: data_store_params.yaml
ros2_ws/src/bonbon_data_stores/launch/: data_stores.launch.py
ros2_ws/src/bonbon_data_stores/scripts/: backup.py  restore.py
ros2_ws/src/bonbon_data_stores/tests/: conftest.py  test_backup.py  test_config.py  test_models.py  test_privacy.py  test_rag_store.py  test_sqlite_repos.py  test_vector_store.py
ros2_ws/src/bonbon_hal/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_hal/bonbon_hal/: __init__.py
ros2_ws/src/bonbon_hal/launch/: hal.launch.py
ros2_ws/src/bonbon_hal/tests/: __init__.py  test_battery_driver.py  test_camera_driver.py  test_driver_base.py  test_estop_driver.py  test_imu_driver.py  test_lidar_driver.py  test_microphone_speaker.py  test_reconnect_policy.py  test_servo_driver.py  test_usb_drivers.py
ros2_ws/src/bonbon_llm/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_llm/bonbon_llm/: __init__.py
ros2_ws/src/bonbon_llm/launch/: llm.launch.py
ros2_ws/src/bonbon_llm/tests/: test_authorization.py  test_command_filter.py  test_hallucination_guard.py  test_llm_orchestrator.py  test_personality_layer.py  test_rag_retriever.py  test_response_logger.py  test_tool_registry.py
ros2_ws/src/bonbon_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/bonbon_msgs/msg/: AudioChunk.msg  BehaviorRecommendation.msg  BumperState.msg  ContextEvent.msg  DetectedObject.msg  DetectedObjectArray.msg  DockingStatus.msg  HalFault.msg  LLMLog.msg  LLMResponse.msg  MemoryEntry.msg  ModuleHealth.msg  NavigationGoal.msg  NavigationStatus.msg  PersonState.msg  PersonStateArray.msg  RecoveryStatus.msg  RiskEvent.msg  SafetyEvent.msg  SafetyState.msg  SemanticScene.msg  ServoState.msg  ServoStateArray.msg  SpeechCommand.msg  SpeechTranscription.msg  TTSRequest.msg  ThermalReadings.msg  UserIntent.msg
ros2_ws/src/bonbon_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_perception/bonbon_perception/: __init__.py
ros2_ws/src/bonbon_perception/launch/: perception.launch.py
ros2_ws/src/bonbon_perception/tests/: test_detection_node_logic.py  test_person_detector.py  test_tracker.py
ros2_ws/src/bonbon_perception_ai/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_perception_ai/bonbon_perception_ai/: __init__.py
ros2_ws/src/bonbon_perception_ai/launch/: perception.launch.py
ros2_ws/src/bonbon_perception_ai/tests/: test_behavior_recommender.py  test_intent_engine.py  test_memory_manager.py  test_modality_buffer.py  test_multimodal_fusion.py  test_risk_assessor.py  test_scene_analyzer.py  test_stale_detector.py
ros2_ws/src/bonbon_safety/: README.md  SAFETY_STATE_MACHINE.md  TROUBLESHOOTING.md  package.xml  setup.cfg  setup.py
ros2_ws/src/bonbon_safety/bonbon_safety/: __init__.py
ros2_ws/src/bonbon_safety/docs/: FAILURE_MODES.md  TEST_STRATEGY.md
ros2_ws/src/bonbon_safety/launch/: safety.launch.py
ros2_ws/src/bonbon_safety/tests/: __init__.py  test_failure_catalog.py  test_fault_handler.py  test_fault_levels.py  test_safety_gate.py  test_safety_policy.py  test_safety_state_machine.py  test_threat_assessor.py  test_watchdog.py
ros2_ws/src/bonbon_simulation/: README.md  package.xml  pytest.ini  setup.cfg  setup.py
ros2_ws/src/bonbon_simulation/bonbon_simulation/: __init__.py
ros2_ws/src/bonbon_simulation/config/: simulation_params.yaml
ros2_ws/src/bonbon_simulation/docs/: ci_simulation_guide.md  deployment_checklist.md  failure_injection_guide.md  gazebo_isaac_options.md  metrics_guide.md  robot_model_guide.md  scenario_writing_guide.md  sensor_simulation_guide.md  setup_guide.md  simulation_overview.md  troubleshooting.md
ros2_ws/src/bonbon_simulation/launch/: headless_ci.launch.py  simulation.launch.py  spawn_robot.launch.py  world.launch.py
ros2_ws/src/bonbon_simulation/resource/: bonbon_simulation
ros2_ws/src/bonbon_simulation/scenarios/: blocked_path_recovery.yaml  camera_failure_interaction.yaml  child_sudden_obstacle.yaml  dashboard_emergency_stop.yaml  dashboard_pause_command.yaml  dynamic_obstacle_replanning.yaml  eight_hour_endurance.yaml  elderly_slowdown.yaml  emergency_stop.yaml  hospital_corridor_navigation.yaml  imu_drift_movement.yaml  lidar_failure_navigation.yaml  low_battery_docking.yaml  map_mismatch.yaml  noisy_speech_navigation.yaml  robot_pushed.yaml  servo_fault_interaction.yaml  tts_emergency_announcement.yaml  unreachable_goal_recovery.yaml  wifi_loss.yaml
ros2_ws/src/bonbon_simulation/tests/: conftest.py  test_simulation_suite.py
ros2_ws/src/bonbon_simulation/worlds/: charging_dock_area.world  classroom_corridor.world  crowded_waiting_area.world  glass_wall_zone.world  home_environment.world  hospital_corridor.world  hospital_patient_room.world  hospital_reception.world  hotel_lobby.world  low_light_zone.world  mall_walkway.world  narrow_passage.world  obstacle_heavy_zone.world  office_hallway.world
ros2_ws/src/bonbon_srvs/: CMakeLists.txt  package.xml
ros2_ws/src/bonbon_srvs/srv/: CancelNavigation.srv  GetNearestCharger.srv  LLMQuery.srv  NavigateTo.srv  SafetyReset.srv
ros2_ws/src/bonbon_vision/: README.md  SETUP_CHECKLIST.md  VSCODE_SETUP.md  demo_webcam.py  package.xml  pytest.ini  setup.cfg  setup.py
ros2_ws/src/bonbon_vision/bonbon_vision/: __init__.py
ros2_ws/src/bonbon_vision/launch/: vision.launch.py
ros2_ws/src/bonbon_vision/tests/: __init__.py  test_detector.py  test_face_pipeline.py  test_frame_processor.py  test_frame_throttler.py  test_model_manager.py  test_privacy_guard.py  test_vision_node.py
(+410 files in other folders)
