<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_behavior_engine</name>
  <version>1.0.0</version>
  <description>
    Central behavior decision engine for the BonBon service robot.
    Fuses emotion, gesture, spatial, speech and LLM signals into safe, validated
    behavior decisions.  The LLM never directly controls navigation or actuation
    — all outputs are classified, risk-assessed and safety-gated before dispatch.
  </description>

  <maintainer email="venka@bonbon-robotics.local">BonBon Robotics</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <exec_depend>bonbon_msgs</exec_depend>
  <exec_depend>bonbon_srvs</exec_depend>

  <exec_depend>python3-pyyaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
