<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_data_stores</name>
  <version>0.1.0</version>
  <description>
    Structured robot memory, interaction history, user profiles, vector search,
    RAG knowledge retrieval, map metadata, and AI context storage for BonBon.
  </description>
  <maintainer email="bonbon@robot.local">BonBon Robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Core Python deps (always required) -->
  <exec_depend>python3-pydantic</exec_depend>

  <!-- Optional: install manually if needed -->
  <!-- pip install faiss-cpu sentence-transformers chromadb -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
