<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_hal</name>
  <version>1.0.0</version>
  <description>
    Hardware Abstraction Layer for the BonBon service robot.
    Abstracts: camera (Orbbec), microphone (ReSpeaker), speaker (ALSA),
    LIDAR (RPLIDAR S2), IMU (MPU-6050), Dynamixel servos, INA226 battery
    monitor, and GPIO emergency stop.
    All hardware drivers include real and mock (simulation) implementations.
  </description>

  <maintainer email="venka@bonbon-robotics.local">BonBon Robotics</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <!-- Custom messages -->
  <exec_depend>bonbon_msgs</exec_depend>
  <exec_depend>bonbon_srvs</exec_depend>

  <!-- Python libraries (real hardware) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>
  <!-- Generic USB camera (V4L2/OpenCV) + USB microphone (ALSA/PortAudio) -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>

  <!-- Test -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
