<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_perception</name>
  <version>1.0.0</version>
  <description>
    Person detection, multi-person tracking, and face recognition for the
    BonBon service robot.  Provides CLASS-C detection_node (person tracking)
    and CLASS-D face_node (identity recognition) with mock backends for CI.
  </description>

  <maintainer email="venka@bonbon-robotics.local">BonBon Robotics</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Custom messages -->
  <exec_depend>bonbon_msgs</exec_depend>

  <!-- Python scientific stack (always available on Jetson) -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Optional: real detector backends -->
  <!-- pip install opencv-python            (HOG detector) -->
  <!-- pip install opencv-contrib-python    (LBP face recognizer) -->
  <!-- pip install ultralytics              (YOLOv8) -->
  <!-- pip install deepface                 (DeepFace recognizer) -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
