<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_perception_ai</name>
  <version>1.0.0</version>
  <description>
    Perception + AI module for the Bonbon service robot.
    Fuses detected objects, tracked persons, speech commands, spatial state,
    and navigation state into a semantic scene understanding, user intent,
    context events, risk events, memory updates, and behavior recommendations.

    Backends: rule-based (always), FAISS (episodic memory), SQLite (structured
    memory), LangChain (optional LLM-based intent classification).
  </description>

  <maintainer email="venka@bonbon-robotics.local">BonBon Robotics</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Custom messages -->
  <exec_depend>bonbon_msgs</exec_depend>

  <!-- Required Python -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Optional backends (pip install) -->
  <!-- pip install faiss-cpu          (vector search, falls back to numpy) -->
  <!-- pip install langchain           (LLM intent engine, optional)       -->
  <!-- pip install openai              (OpenAI backend for LangChain)      -->
  <!-- pip install sentence-transformers (richer embeddings, optional)     -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
