<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_safety</name>
  <version>1.0.0</version>
  <description>
    Safety supervisor, hardware e-stop, and watchdog for the BonBon service robot.
    Implements an 8-state FSM (INITIALIZING → NORMAL → CAUTION → DANGER → DOCKING →
    DEGRADED → FAULT → SAFE_STOP) with declarative YAML policy rules.
  </description>

  <maintainer email="venka@bonbon-robotics.local">BonBon Robotics</maintainer>
  <license>Proprietary</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Python dependencies (ROS2) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclpy_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <!-- Custom messages / services -->
  <exec_depend>bonbon_msgs</exec_depend>
  <exec_depend>bonbon_srvs</exec_depend>

  <!-- Python library dependencies -->
  <exec_depend>python3-pyyaml</exec_depend>
  <exec_depend>python3-sqlite3</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
