<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_simulation</name>
  <version>1.0.0</version>
  <description>
    Headless and Gazebo-compatible simulation validation suite for the BonBon service robot.
    No real-world deployment should proceed unless approved simulation scenarios pass.
  </description>

  <maintainer email="venka@bonbon-robotics.local">BonBon Robotics</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>bonbon_navigation</exec_depend>
  <exec_depend>bonbon_safety</exec_depend>
  <exec_depend>bonbon_operator_api</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
