<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonbon_vision</name>
  <version>0.1.0</version>
  <description>
    Vision module for the Bonbon service robot.
    Provides YOLO object detection, face detection, InsightFace/DeepFace recognition,
    privacy-safe anonymisation, configurable frame-rate throttling, model lifecycle
    management, and structured health reporting to the Safety Supervisor.
  </description>

  <maintainer email="bonbon@example.com">Bonbon Robotics</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>bonbon_msgs</depend>

  <!-- Python libraries (non-ROS) — optional/soft -->
  <!-- numpy, opencv-python, ultralytics, insightface, deepface are
       declared as exec_depends so rosdep knows about them; any that
       are missing at runtime cause the node to enter degraded mode
       rather than crashing. -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
